syntax = "proto3";

option csharp_namespace = "CleanArchitecture.Proto.Citas";

import "Citas/Models.proto";

service CitasApi {
  rpc GetByIds(GetCitasByIdsRequest) returns (GetCitasByIdsResult);
}
