syntax = "proto3";

option csharp_namespace = "CleanArchitecture.Proto.Citas";

message Cita {
  string id = 1;
  string eventoId = 2;
  bool isDeleted = 3;
}

message GetCitasByIdsResult {
  repeated Cita citas = 1;
}

message GetCitasByIdsRequest {
  repeated string ids = 1;
}
